--- a/Frontend - admin/index.html
+++ b/Frontend - admin/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/assets/logoclinica-vertical.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Humanización UCI</title>
+    <title>Puesto de enfermería UCI</title>
   </head>
   <body>
     <div id="root"></div>
